Tests/CompileFail/BitwiseNotDouble.swift
import SwiftQL

func rejectDoubleBitwiseNotExpression() {
    let realExpression = XLNamedBindingReference<Double>(name: "real")
    _ = ~realExpression // expected-error
}
